para_se_basear/Trab_Anna/CodeGeneration/Tests/Error/18.AMZ
void main() {
	if (true && false) {

	} else if (false) {

	} else if ([true]) { //ERRO

	} else if (1) { //ERRO

	}
}
